new fix for low stock
